--- a/package.json
+++ b/package.json
@@ -215,9 +215,13 @@
       ]
     },
     "linux": {
-      "target": [
-        "AppImage"
-      ],
+      "target": {
+        "target": "AppImage",
+        "arch": [
+          "arm64",
+          "x64"
+        ]
+      },
       "category": "Development"
     },
     "directories": {
