--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "description": "A foundation for scalable desktop apps",
+  "description": "A foundation for scalable desktop apps 1",
   "keywords": [
     "electron",
     "boilerplate",
