--- a/package.json
+++ b/package.json
@@ -172,6 +172,7 @@
   },
   "build": {
     "productName": "ElectronReact",
+    "artifactName": "${productName}-v${version}-${arch}.${ext}",
     "appId": "org.erb.ElectronReact",
     "asar": true,
     "asarUnpack": "**\\*.{node,dll}",
